# BountyChecker

./: config.toml  pyproject.toml
bountychecker/: __main__.py  bounties.py  config.py  core.py  gui.py
