[tool.poetry]
name = "bountychecker"
version = "0.1.0"
description = "Fork of ManInTheWallPog's Warframe Bounty Checker"
authors = ["Aman Phatak <aman@zeffo.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
watchdog = "^4.0.1"
catppuccin = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
